SDB Change Log
==============

Homepage:
    http://jena.sf.net/SDB
Documentation:
    http://jena.hpl.hp.com/wiki/SDB

==== SDB v1.2

+ Must use ARQ 2.5 (changes to quad support in preparation for optimization and path support)
+ Fix to BulkLoader (MS SQL Server) to allow creating a second store over an JDBC so JDBC pooled conenctions work
+ Added Store#isClosed(). Does nothing currently except track whether you've called close().

==== SDB v1.1

+ SPARQL/Update support 

+ Jar upgrades: 
    commons-logging-1.1.1
    new versions ARQ and Jena jars (no name changes).
    
+ MySQL : Node table schema changed to be LONGTEXT.  In v1.0 literals longer than 64K caused errors.
  Old databases layouts continue to work.  Ideally, reformat and reload. 
    
**** The named graph indexing has been improved ****
  Old databases still work but ideally should be reindexed.
  
  Migration: drop indexes with SBD 1.0 tools, create indexes with SDB 1.1 tools
  Manaual deletion of all secondary indexes via DB admin tools also will work 

+ Assembler structures clarified.  [document on wiki]

+ SQL code generation made more regular.

+ H2 support

+ removeAll() fastpath added

==== SDB v1.0

+ DB2 support
+ Fix: Transaction handling
+ More testing
