@@ -26,6 +26,8 @@ import com.hp.hpl.jena.sdb.core.Generator;
 import com.hp.hpl.jena.sdb.core.Gensym;
 import com.hp.hpl.jena.sdb.core.SDBConstants;
 import com.hp.hpl.jena.sdb.graph.TransactionHandlerSDB;
+import com.hp.hpl.jena.sdb.util.Pool;
+
 import com.hp.hpl.jena.shared.Command;
 
 /*
@@ -40,6 +42,7 @@ public class SDBConnection
     static private Generator gen = Gensym.create("connection-") ;
 
     private Connection sqlConnection = null ;
+    private Pool<SDBConnection> pool = null ;
     boolean inTransaction = false ;
     TransactionHandler transactionHandler = null ;
     String label = gen.next() ;
@@ -79,6 +82,11 @@ public class SDBConnection
         if ( url != null ) setJdbcURL(url) ;
     }
 
+    public void setPool(Pool<SDBConnection> pool)
+    {
+        this.pool = pool ;
+    }
+    
     public static SDBConnection none()
     {
         return new SDBConnection(JDBC.jdbcNone, null, null) ;
@@ -263,6 +271,12 @@ public class SDBConnection
     
     public void close()
     {
+        if ( pool != null )
+        {
+            pool.put(this) ;
+            return ;
+        }
+        
         Connection connection = getSqlConnection() ;
         try {
             if ( connection != null && ! connection.isClosed() )
